Fix carousel image spacing

--- a/src/pages/Home/components/Middle/middle.module.css
+++ b/src/pages/Home/components/Middle/middle.module.css
@@ -52,10 +52,8 @@
 }
 
 .slide {
-  height: 200px;
   width: 100%;
   display: flex;
-  padding: 50px;
   align-items: center;
   perspective: 100px;
 }
